--- a/src/styles/intro.css
+++ b/src/styles/intro.css
@@ -55,18 +55,29 @@
   width: 100%;
   min-height: 100vh;
   display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .frame-inner {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background-image: url("https://images.unsplash.com/photo-1621570168297-bdcdd4457664?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   background-position: center;
   background-size: cover;
   clip-path: polygon(50% 15%, 80% 40%, 80% 75%, 20% 75%, 20% 40%);
+  overflow: hidden;
+}
+
+.under-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  justify-content: space-between;
+  padding: 2rem;
 }
