--- a/src/styles/landingBanner.css
+++ b/src/styles/landingBanner.css
@@ -3,15 +3,21 @@
   display: flex;
   justify-content: center;
   color: white;
+  position: relative;
+  overflow: hidden;
 }
 
 .banner-img {
-  background-image: url("https://images.unsplash.com/photo-1569428047118-ae9338065103?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
-  background-size: cover;
-  background-position: center;
-  position: absolute;
   width: 100%;
   height: 100%;
+  position: absolute;
+}
+
+.banner-img > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 .banner-text {
